--- a/templates/ost-config.php.erb
+++ b/templates/ost-config.php.erb
@@ -27,7 +27,7 @@
  *
  * ROOT_PATH *must* end with a forward-slash!
  */
-define('ROOT_PATH', '/osticket/');
+# define('ROOT_PATH', '/support/');
 
 #Disable direct access.
 if(!strcasecmp(basename($_SERVER['SCRIPT_NAME']),basename(__FILE__)) || !defined('INCLUDE_DIR'))
